# typeread

./: .gitignore  LICENSE  README.md  design.md  index.html  miniplan.md  next.md  package-lock.json  package.json  plan.md  replace_bg.js  scratch.js  sky raiders book 1 (1).epub  tailwind.config.ts  vite.config.ts
.github/workflows/: release.yml
scratch/: analyze_alpha.py  analyze_alpha_hist.py  analyze_generated.py  analyze_icon.py  analyze_og.py  analyze_words.cjs  build_icns.py  new_easy_bank.json  new_medium_bank.json  process_icon.py  process_medium.cjs  process_words.cjs  section_2_diff.txt  test_icon.py  update_medium.cjs  update_word_bank.cjs  verify_distribution.cjs
scripts/: generate_cask.cjs  sync_version.cjs
src/: App.tsx  index.css  main.tsx  theme.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: analytics.rs  db.rs  main.rs  models.rs  parser.rs  welcome.rs
src/components/: AchievementsView.tsx  AnalyticsView.tsx  EverfrostBackground.tsx  Hud.tsx  LibraryView.tsx  NebulaBackground.tsx  OnboardingTutorial.tsx  PracticeView.tsx  RainyWindowBackground.tsx  ReaderView.tsx  SatinHeartBackground.tsx  SessionSummaryModal.tsx  SettingsView.tsx  ShopView.tsx  Titlebar.tsx  TypingLayer.tsx  VelvetMercuryBackground.tsx  VersusConfigModal.tsx
src/hooks/: useBufferedKeystrokeTransport.ts
src/lib/: achievements.ts  demo.ts  keyboard-layouts.ts  progression.ts  tauri.ts  utils.ts  word-bank.ts
src/store/: app-store.ts
src/utils/: pagination.ts  typing.ts
(+4 files in other folders)
