[package]
name = "typeread"
version = "0.1.0"
description = "A local desktop typing and reading application"
authors = ["Codex"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
anyhow = "1.0.95"
chrono = { version = "0.4.39", features = ["serde"] }
epub = "2.1.2"
pulldown-cmark = "0.12.2"
regex = "1.11.1"
rfd = "0.15.2"
roxmltree = "0.20.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
scraper = "0.22.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tauri = { version = "2.2.5", features = [] }
zip = "2.2.2"
base64 = "0.22.1"
tauri-plugin-fs = "2.0.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
